k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dialogos-trainer
  namespace: dialogos-trainer
  labels:
    app: dialogos-trainer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: dialogos-trainer
